--- a/booking-faces/pom.xml
+++ b/booking-faces/pom.xml
@@ -99,7 +99,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>            
+            <version>${log4j.version}</version>
             <scope>runtime</scope>
             <exclusions>
                 <exclusion>
@@ -164,6 +164,9 @@
                 <configuration>
                     <source>${java.source.version}</source>
                     <target>${java.target.version}</target>
+                    <compilerArguments>
+                        <endorseddirs>${endorsed.dir}</endorseddirs>
+                    </compilerArguments>
                 </configuration>
             </plugin>
             <plugin>
